# Extracty

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cleaned_content.txt  content.txt  content_with_playwright.json  content_with_requests.json  pyproject.toml  requirements.txt
extracty/: __init__.py  llm_extractor.py  scraper.py
src/: config.py  gpt_scraper.py  main.py  schemas.py  web_scraper.py
structify/: __init__.py  config.py  llm_extractor.py  main.py  scraper.py
tests/: __init__.py  clean_html_test.py  requests_test.py  web_scraper_test.py
