[tool.poetry]
name = "structify"
version = "0.1.0"
description = "extract structured data from any unstructered web page"
authors = ["Mamdouh66"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"
fastapi = {extras = ["all"], version = "^0.110.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
playwright = "^1.42.0"
openai = "^1.14.3"
instructor = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
