[tool.poetry]
name = "extracty"
version = "0.1.0"
description = "extract structured data from any unstructered web page"
license = "MIT License"
authors = ["Mamdouh66"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
beautifulsoup4 = "^4.12.3"
playwright = "^1.42.0"
openai = "^1.14.3"
instructor = "^0.6.7"
langchain-community = "^0.0.29"
fake-useragent = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
twine = "^5.0.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
